[package]
name = "hoho-recv"
version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
solana-sdk = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true, features = ["default", "serde"] }

[lints]
workspace = true

[[bin]]
name = "hoho-recv"
path = "src/main.rs"